feat: ✨react-native-dragbox

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@iamgx/react-native-draggable-view",
-  "version": "0.0.1",
+  "name": "react-native-dragbox",
+  "version": "0.0.2",
   "main": "index.js",
   "license": "MIT"
 }
